<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.robotics.keelin.homefindingrobot.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView android:text="@string/robot_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:text="@string/distance_str"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/distance_textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView android:text="@string/pos_val_str"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/position_textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintLeft_toRightOf="@+id/distance_textview" />

    <TextView android:text="@string/heading_str"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/heading_textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintLeft_toRightOf="@+id/position_textview"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <TextView android:text="@string/drift_str"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/drift_textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintLeft_toRightOf="@+id/heading_textview" />

    <TextView android:text="@string/joy_val_str"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/joystick_textview"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintLeft_toRightOf="@+id/drift_textview" />

    <Button
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/auto_run"
        android:id="@+id/button5"
        android:clickable="true"
        android:onClick="auto_run"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/control_mode"
        android:id="@+id/button9"
        android:clickable="true"
        android:onClick="control_mode"
        android:layout_marginTop="323dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/button7" />

    <Button
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/set_home"
        android:onClick="set_home"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/go_home"
        android:onClick="go_home"
        android:id="@+id/button7"
        android:layout_marginTop="323dp"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toRightOf="@+id/button9" />

    <Button
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/stop_robot"
        android:onClick="stop"
        android:id="@+id/button8"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="33dp"
        android:layout_height="48dp"
        android:onClick="right"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="21dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginLeft="21dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="33dp"
        android:layout_height="48dp"
        android:onClick="left"
        android:layout_marginStart="22dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button7"
        android:layout_marginLeft="22dp"
        tools:layout_editor_absoluteY="365dp"
        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>
