<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.robotics.keelin.homefindingrobot.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView android:text="@string/bluetooth_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/turn_on"
        android:id="@+id/button"
        android:clickable="true"
        android:onClick="on"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <Button
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/get_visible"
        android:onClick="visible"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textview"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:layout_marginStart="-170dp"
        android:layout_marginLeft="-170dp"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/list_devices"
        android:onClick="list"
        android:id="@+id/button3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button2" />

    <Button
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/turn_off"
        android:onClick="off"
        android:id="@+id/button4"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices"
        android:id="@+id/textView2"
        android:textColor="#ff34ff06"
        android:textSize="25sp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/listView"
        android:layout_alignStart="@+id/listView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/textView2"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
